# auth-rs

./: .gitignore  Cargo.toml
src/: db.rs  lib.rs  main.rs
src/handlers/: auth.rs  mod.rs  product.rs
src/middleware/: auth.rs
src/models/: user.rs
src/services/: mail.rs  mod.rs  otp.rs
src/templates/: README.md
