[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10.0"
chrono = "0.4.0"
validator = { version = "0.17.0", features = ["derive"] }
rand = "0.8.5"
lettre = "0.11"
dotenv = "0.15.0"
tera = "1.19.1"
async-stripe = { version = "0.34.1", features = ["runtime-tokio-hyper"] }

[dev-dependencies]
clippy = "=0.0.210"
