[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hello-world"

[dependencies]
actix-web = "4"
mongodb = "2.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10.0"
chrono = "0.4.0"
validator = { version = "0.17.0", features = ["derive"] }
rand = "0.8.5"
lettre = "0.11"
tera = "1.19.1"
async-stripe = { version = "0.34.1", features = ["runtime-tokio-hyper"] }
futures = "0.3.30"
actix-service = "2.0.2"
actix-cors = "0.7.0"
actix-session = "0.9.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
dotenvy = "0.15.7"

[dev-dependencies]
cargo-audit = "0.20.0"
reqwest = "0.11.26"
